[fix] position of iamge detail modal and contrast of image result span

--- a/src/less/definitions.less
+++ b/src/less/definitions.less
@@ -68,7 +68,7 @@
   --color-result-search-url-border: #dfe1e5;
   --color-result-search-url-font: #000;
   // Images Colors
-  --color-result-image-span-font: #4d5156;
+  --color-result-image-span-font: #202124;
   --color-result-image-span-font-selected: #fff;
   --color-result-image-background: #fff;
   /// Settings Colors
@@ -232,7 +232,7 @@
 @results-image-row-height-phone: 6rem;
 @search-width: 42rem;
 // heigh of #search, see detail.less
-@search-height: 8.4rem;
+@search-height: 8.6rem;
 
 /// Device Size
 /// @desktop > @tablet
